assets/network-policy/allow-ingress-to-metrics-operand.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-metrics-operand
  namespace: ${NAMESPACE}
spec:
  podSelector:
    matchLabels:
      app: secrets-store-csi-driver-node
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8095
