assets/network-policy/allow-ingress-to-metrics-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sscsi-allow-ingress-to-metrics-operator
  namespace: ${NAMESPACE}
spec:
  podSelector:
    matchLabels:
      app: secrets-store-csi-driver-operator
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
